--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,21 +1,26 @@
-/name: C/C++ CI
+name: C/C++ CI
 
 on:
- push:
-  branches: [ main ]
- pull_request:
-  branches: [ main ]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
- build-and-test:
-   runs-on: ubuntu-latest
-   steps:
-   - uses: actions/checkout@v2
-   - name: install cppunit
-   run: sudo apt install -y libcppunit-dev
-   - name: configure
-   run: ./configure
-   - name: make
-   run: make
-   - name: make test
-   run: make test
+  build-and-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install cppunit
+        run: sudo apt-get install -y libcppunit-dev
+
+      - name: Configure
+        run: ./configure
+
+      - name: Build
+        run: make
+
+      - name: Test
+        run: make test
